<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggle_font_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:paddingStart="8dp"
            android:text="@string/toggle_font_style_sw"
            style="@style/TextAppearance.AppCompat.Medium"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/header_font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_style_fake_font"
            android:textStyle="bold"
            style="@style/TextAppearance.MaterialComponents.Headline3" />

        <TextView
            android:id="@+id/normal_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/lobster_two_incomplete"
            android:text="@string/lobster_regular_tv"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/bold_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/lobster_two_incomplete"
            android:text="@string/lobster_bold_tv"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/italic_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/lobster_two_incomplete"
            android:text="@string/lobster_italic_tv"
            android:textSize="48sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/bold_italic_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/lobster_two_incomplete"
            android:text="@string/lobster_bold_italic_tv"
            android:textSize="48sp"
            android:textStyle="bold|italic" />

    </LinearLayout>
</ScrollView>

